Enable MPI and MPI_OPENMP backends and fix environment variables for ctest

--- a/testing/CMakeLists.txt
+++ b/testing/CMakeLists.txt
@@ -52,24 +52,21 @@ set(LRENGINES "SVD" "RRQR" "RSVD")
 foreach(lrengine IN ITEMS ${LRENGINES})
     add_test(NAME minimal_${lrengine} COMMAND
         minimal 2500 500 10 1e-9)
+    set(test_env "MKL_NUM_THREADS=1"
+        "STARSH_BACKEND=OPENMP"
+        "STARSH_LRENGINE=${lrengine}")
     set_tests_properties(minimal_${lrengine} PROPERTIES
-        ENVIRONMENT "MKL_NUM_THREADS=1")
-    set_tests_properties(minimal_${lrengine} PROPERTIES
-        ENVIRONMENT "STARSH_BACKENDS=OPENMP")
-    set_tests_properties(minimal_${lrengine} PROPERTIES
-        ENVIRONMENT "STARSH_LRENGINE=${lrengine}")
+        ENVIRONMENT "${test_env}")
     if(MPI)
         add_test(NAME mpi_minimal_${lrengine} COMMAND
             ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 4
             ./mpi_minimal 2500 500 10 1e-9)
+        set(test_env "MKL_NUM_THREADS=1"
+            "OMP_NUM_THREADS=${NOMP}"
+            "STARSH_BACKEND=MPI_OPENMP"
+            "STARSH_LRENGINE=${lrengine}")
         set_tests_properties(mpi_minimal_${lrengine} PROPERTIES
-            ENVIRONMENT "MKL_NUM_THREADS=1")
-        set_tests_properties(mpi_minimal_${lrengine} PROPERTIES
-            ENVIRONMENT "OMP_NUM_THREADS=${NOMP}")
-        set_tests_properties(mpi_minimal_${lrengine} PROPERTIES
-            ENVIRONMENT "STARSH_BACKENDS=MPI")
-        set_tests_properties(mpi_minimal_${lrengine} PROPERTIES
-            ENVIRONMENT "STARSH_LRENGINE=${lrengine}")
+            ENVIRONMENT "${test_env}")
     endif()
 endforeach()
 
@@ -77,12 +74,11 @@ endforeach()
 foreach(lrengine IN ITEMS ${LRENGINES})
     add_test(NAME rndtiled_${lrengine} COMMAND
         rndtiled 2500 250 0.5 100 1e-9)
+    set(test_env "MKL_NUM_THREADS=1"
+        "STARSH_BACKEND=OPENMP"
+        "STARSH_LRENGINE=${lrengine}")
     set_tests_properties(rndtiled_${lrengine} PROPERTIES
-        ENVIRONMENT "MKL_NUM_THREADS=1")
-    set_tests_properties(rndtiled_${lrengine} PROPERTIES
-        ENVIRONMENT "STARSH_BACKENDS=OPENMP")
-    set_tests_properties(rndtiled_${lrengine} PROPERTIES
-        ENVIRONMENT "STARSH_LRENGINE=${lrengine}")
+        ENVIRONMENT "${test_env}")
 endforeach()
 
 # Add tests for spatial statistics
@@ -104,43 +100,30 @@ foreach(lrengine IN ITEMS ${LRENGINES})
         list(GET KERCODES ${kernel} KERCODE)
         add_test(NAME spatial_2d_${KERNAME}_${lrengine} COMMAND
             spatial 2 ${KERCODE} 0.1 10 2500 500 90 1e-9 1 0)
+        set(test_env "MKL_NUM_THREADS=1"
+            "STARSH_BACKEND=OPENMP"
+            "STARSH_LRENGINE=${lrengine}")
         set_tests_properties(spatial_2d_${KERNAME}_${lrengine} PROPERTIES
-            ENVIRONMENT "MKL_NUM_THREADS=1")
-        set_tests_properties(spatial_2d_${KERNAME}_${lrengine} PROPERTIES
-            ENVIRONMENT "STARSH_BACKENDS=OPENMP")
-        set_tests_properties(spatial_2d_${KERNAME}_${lrengine} PROPERTIES
-            ENVIRONMENT "STARSH_LRENGINE=${lrengine}")
+            ENVIRONMENT "${test_env}")
         add_test(NAME spatial_3d_${KERNAME}_${lrengine} COMMAND
             spatial 3 ${KERCODE} 0.1 10 3375 675 240 1e-9 1 0)
         set_tests_properties(spatial_3d_${KERNAME}_${lrengine} PROPERTIES
-            ENVIRONMENT "MKL_NUM_THREADS=1")
-        set_tests_properties(spatial_3d_${KERNAME}_${lrengine} PROPERTIES
-            ENVIRONMENT "STARSH_BACKENDS=OPENMP")
-        set_tests_properties(spatial_3d_${KERNAME}_${lrengine} PROPERTIES
-            ENVIRONMENT "STARSH_LRENGINE=${lrengine}")
+            ENVIRONMENT "${test_env}")
         if(MPI)
             add_test(NAME mpi_spatial_2d_${KERNAME}_${lrengine} COMMAND
                 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 4
                 ./mpi_spatial 2 ${KERCODE} 0.1 10 2500 500 90 1e-9 1 0)
+            set(test_env "MKL_NUM_THREADS=1"
+                "OMP_NUM_THREADS=${NOMP}"
+                "STARSH_BACKEND=MPI_OPENMP"
+                "STARSH_LRENGINE=${lrengine}")
             set_tests_properties(mpi_spatial_2d_${KERNAME}_${lrengine} PROPERTIES
-                ENVIRONMENT "MKL_NUM_THREADS=1")
-            set_tests_properties(mpi_spatial_2d_${KERNAME}_${lrengine} PROPERTIES
-                ENVIRONMENT "OMP_NUM_THREADS=${NOMP}")
-            set_tests_properties(mpi_spatial_2d_${KERNAME}_${lrengine} PROPERTIES
-                ENVIRONMENT "STARSH_BACKENDS=MPI")
-            set_tests_properties(mpi_spatial_2d_${KERNAME}_${lrengine} PROPERTIES
-                ENVIRONMENT "STARSH_LRENGINE=${lrengine}")
+                ENVIRONMENT "${test_env}")
             add_test(NAME mpi_spatial_3d_${KERNAME}_${lrengine} COMMAND
                 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 4
                 ./mpi_spatial 3 ${KERCODE} 0.1 10 3375 675 240 1e-9 1 0)
             set_tests_properties(mpi_spatial_3d_${KERNAME}_${lrengine} PROPERTIES
-                ENVIRONMENT "MKL_NUM_THREADS=1")
-            set_tests_properties(mpi_spatial_3d_${KERNAME}_${lrengine} PROPERTIES
-                ENVIRONMENT "OMP_NUM_THREADS=${NOMP}")
-            set_tests_properties(mpi_spatial_3d_${KERNAME}_${lrengine} PROPERTIES
-                ENVIRONMENT "STARSH_BACKENDS=MPI")
-            set_tests_properties(mpi_spatial_3d_${KERNAME}_${lrengine} PROPERTIES
-                ENVIRONMENT "STARSH_LRENGINE=${lrengine}")
+                ENVIRONMENT "${test_env}")
         endif()
     endforeach()
 endforeach()
