--- a/src/applications/CMakeLists.txt
+++ b/src/applications/CMakeLists.txt
@@ -4,4 +4,5 @@ set(STARSH_SRC
     "${CMAKE_CURRENT_SOURCE_DIR}/spatial.c"
     "${CMAKE_CURRENT_SOURCE_DIR}/rndtiled.c"
     "${CMAKE_CURRENT_SOURCE_DIR}/minimal.c"
+    "${CMAKE_CURRENT_SOURCE_DIR}/particles.c"
     ${STARSH_SRC} PARENT_SCOPE)
