--- a/testing/CMakeLists.txt
+++ b/testing/CMakeLists.txt
@@ -1,5 +1,9 @@
 # Defines the source files of the tests. Each file generates 1 test
-set(tests_files)
+set(tests_files
+    "particles.c")
+
+file(COPY "particles.txt"
+    DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 
 # NEED TO PUT EXPLICIT DEPENDENCIES ON OTHER LIBRARIES HERE
 # However, it works for static library libstarsh.a and will NOT work for shared
@@ -48,6 +52,9 @@ math(EXPR NOMP ${N}/4)
 # Set possible approximation lrengines
 set(LRENGINES "SVD" "RRQR" "RSVD")
 
+# Add tests for IO
+add_test(NAME particles_io COMMAND particles)
+
 # Add tests for minimal example
 foreach(lrengine IN ITEMS ${LRENGINES})
     add_test(NAME minimal_${lrengine} COMMAND
@@ -93,37 +100,57 @@ if(GSL_FOUND)
 endif()
 list(LENGTH KERNAMES NKERNELS)
 math(EXPR NKERNELS "${NKERNELS}-1")
-# Then cycle over all supported configurations
+
+# Set possible generation schemes for particles
+set(PLACENAMES "rand" "uniform" "randgrid" "quasiuniform1" "quasiuniform2"
+    "obsolete1" "obsolete2")
+set(PLACEMENTS "1" "3" "4" "6" "7" "-1" "-2")
+list(LENGTH PLACEMENTS NPLACES)
+math(EXPR NPLACES "${NPLACES}-1")
+
+# Then cycle over all supported configurations for spatial statistics tests
 foreach(lrengine IN ITEMS ${LRENGINES})
     foreach(kernel RANGE ${NKERNELS})
-        list(GET KERNAMES ${kernel} KERNAME)
-        list(GET KERCODES ${kernel} KERCODE)
-        add_test(NAME spatial_2d_${KERNAME}_${lrengine} COMMAND
-            spatial 2 ${KERCODE} 0.1 10 2500 500 90 1e-9 1 0)
-        set(test_env "MKL_NUM_THREADS=1"
-            "STARSH_BACKEND=OPENMP"
-            "STARSH_LRENGINE=${lrengine}")
-        set_tests_properties(spatial_2d_${KERNAME}_${lrengine} PROPERTIES
-            ENVIRONMENT "${test_env}")
-        add_test(NAME spatial_3d_${KERNAME}_${lrengine} COMMAND
-            spatial 3 ${KERCODE} 0.1 10 3375 675 240 1e-9 1 0)
-        set_tests_properties(spatial_3d_${KERNAME}_${lrengine} PROPERTIES
-            ENVIRONMENT "${test_env}")
-        if(MPI)
-            add_test(NAME mpi_spatial_2d_${KERNAME}_${lrengine} COMMAND
-                ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 4
-                ./mpi_spatial 2 ${KERCODE} 0.1 10 2500 500 90 1e-9 1 0)
+        foreach(place RANGE ${NPLACES})
+            list(GET KERNAMES ${kernel} KERNAME)
+            list(GET KERCODES ${kernel} KERCODE)
+            list(GET PLACEMENTS ${place} placement)
+            list(GET PLACENAMES ${place} placename)
+            add_test(NAME spatial_2d_${KERNAME}_${lrengine}_${placename}
+                COMMAND spatial 2 ${placement} ${KERCODE} 0.1 10 2500 500 90
+                1e-9 1 0)
             set(test_env "MKL_NUM_THREADS=1"
-                "OMP_NUM_THREADS=${NOMP}"
-                "STARSH_BACKEND=MPI_OPENMP"
+                "STARSH_BACKEND=OPENMP"
                 "STARSH_LRENGINE=${lrengine}")
-            set_tests_properties(mpi_spatial_2d_${KERNAME}_${lrengine} PROPERTIES
-                ENVIRONMENT "${test_env}")
-            add_test(NAME mpi_spatial_3d_${KERNAME}_${lrengine} COMMAND
-                ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 4
-                ./mpi_spatial 3 ${KERCODE} 0.1 10 3375 675 240 1e-9 1 0)
-            set_tests_properties(mpi_spatial_3d_${KERNAME}_${lrengine} PROPERTIES
-                ENVIRONMENT "${test_env}")
-        endif()
+            set_tests_properties(spatial_2d_${KERNAME}_${lrengine}_${placename}
+                PROPERTIES ENVIRONMENT "${test_env}")
+            add_test(NAME spatial_3d_${KERNAME}_${lrengine}_${placename}
+                COMMAND spatial 3 ${placement} ${KERCODE} 0.1 10 3375 675 240
+                1e-9 1 0)
+            set_tests_properties(spatial_3d_${KERNAME}_${lrengine}_${placename}
+                PROPERTIES ENVIRONMENT "${test_env}")
+            if(MPI)
+                add_test(NAME
+                    mpi_spatial_2d_${KERNAME}_${lrengine}_${placename}
+                    COMMAND ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 4
+                    ./mpi_spatial 2 ${placement} ${KERCODE} 0.1 10 2500 500 90
+                    1e-9 1 0)
+                set(test_env "MKL_NUM_THREADS=1"
+                    "OMP_NUM_THREADS=${NOMP}"
+                    "STARSH_BACKEND=MPI_OPENMP"
+                    "STARSH_LRENGINE=${lrengine}")
+                set_tests_properties(
+                    mpi_spatial_2d_${KERNAME}_${lrengine}_${placename}
+                    PROPERTIES ENVIRONMENT "${test_env}")
+                add_test(NAME
+                    mpi_spatial_3d_${KERNAME}_${lrengine}_${placename}
+                    COMMAND ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 4
+                    ./mpi_spatial 3 ${placement} ${KERCODE} 0.1 10 3375 675 240
+                    1e-9 1 0)
+                set_tests_properties(
+                    mpi_spatial_3d_${KERNAME}_${lrengine}_${placename}
+                    PROPERTIES ENVIRONMENT "${test_env}")
+            endif()
+        endforeach()
     endforeach()
 endforeach()
