--- a/testing/CMakeLists.txt
+++ b/testing/CMakeLists.txt
@@ -56,101 +56,113 @@ set(LRENGINES "SVD" "RRQR" "RSVD")
 add_test(NAME particles_io COMMAND particles)
 
 # Add tests for minimal example
-foreach(lrengine IN ITEMS ${LRENGINES})
-    add_test(NAME minimal_${lrengine} COMMAND
-        minimal 2500 500 10 1e-9)
-    set(test_env "MKL_NUM_THREADS=1"
-        "STARSH_BACKEND=OPENMP"
-        "STARSH_LRENGINE=${lrengine}")
-    set_tests_properties(minimal_${lrengine} PROPERTIES
-        ENVIRONMENT "${test_env}")
-    if(MPI)
-        add_test(NAME mpi_minimal_${lrengine} COMMAND
-            ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 4
-            ./mpi_minimal 2500 500 10 1e-9)
+# Check if OPENMP is supported, since we use omp_get_wtime function to measure
+# performance
+if(OPENMP)
+    foreach(lrengine IN ITEMS ${LRENGINES})
+        add_test(NAME minimal_${lrengine} COMMAND
+            minimal 2500 500 10 1e-9)
         set(test_env "MKL_NUM_THREADS=1"
-            "OMP_NUM_THREADS=${NOMP}"
-            "STARSH_BACKEND=MPI_OPENMP"
+            "STARSH_BACKEND=OPENMP"
             "STARSH_LRENGINE=${lrengine}")
-        set_tests_properties(mpi_minimal_${lrengine} PROPERTIES
+        set_tests_properties(minimal_${lrengine} PROPERTIES
             ENVIRONMENT "${test_env}")
-    endif()
-endforeach()
+        if(MPI)
+            add_test(NAME mpi_minimal_${lrengine} COMMAND
+                ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 4
+                ./mpi_minimal 2500 500 10 1e-9)
+            set(test_env "MKL_NUM_THREADS=1"
+                "OMP_NUM_THREADS=${NOMP}"
+                "STARSH_BACKEND=MPI_OPENMP"
+                "STARSH_LRENGINE=${lrengine}")
+            set_tests_properties(mpi_minimal_${lrengine} PROPERTIES
+                ENVIRONMENT "${test_env}")
+        endif()
+    endforeach()
+endif()
 
 # Add tests for synthetic TLR matrices
-foreach(lrengine IN ITEMS ${LRENGINES})
-    add_test(NAME rndtiled_${lrengine} COMMAND
-        rndtiled 2500 250 0.5 100 1e-9)
-    set(test_env "MKL_NUM_THREADS=1"
-        "STARSH_BACKEND=OPENMP"
-        "STARSH_LRENGINE=${lrengine}")
-    set_tests_properties(rndtiled_${lrengine} PROPERTIES
-        ENVIRONMENT "${test_env}")
-endforeach()
+# Check if OPENMP is supported, since we use omp_get_wtime function to measure
+# performance
+if(OPENMP)
+    foreach(lrengine IN ITEMS ${LRENGINES})
+        add_test(NAME rndtiled_${lrengine} COMMAND
+            rndtiled 2500 250 0.5 100 1e-9)
+        set(test_env "MKL_NUM_THREADS=1"
+            "STARSH_BACKEND=OPENMP"
+            "STARSH_LRENGINE=${lrengine}")
+        set_tests_properties(rndtiled_${lrengine} PROPERTIES
+            ENVIRONMENT "${test_env}")
+    endforeach()
+endif()
 
 # Add tests for spatial statistics
-# At first decide what matrix kernels are supported
-set(KERNAMES)
-set(KERCODES)
-list(APPEND KERNAMES "exp" "sqrexp")
-list(APPEND KERCODES "11" "12")
-if(GSL_FOUND)
-    list(APPEND KERNAMES "matern" "matern2")
-    list(APPEND KERCODES "13" "14")
-endif()
-list(LENGTH KERNAMES NKERNELS)
-math(EXPR NKERNELS "${NKERNELS}-1")
+# Check if OPENMP is supported, since we use omp_get_wtime function to measure
+# performance
+if(OPENMP)
+    # At first decide what matrix kernels are supported
+    set(KERNAMES)
+    set(KERCODES)
+    list(APPEND KERNAMES "exp" "sqrexp")
+    list(APPEND KERCODES "11" "12")
+    if(GSL_FOUND)
+        list(APPEND KERNAMES "matern" "matern2")
+        list(APPEND KERCODES "13" "14")
+    endif()
+    list(LENGTH KERNAMES NKERNELS)
+    math(EXPR NKERNELS "${NKERNELS}-1")
 
-# Set possible generation schemes for particles
-set(PLACENAMES "rand" "uniform" "randgrid" "quasiuniform1" "quasiuniform2"
-    "obsolete1" "obsolete2")
-set(PLACEMENTS "1" "3" "4" "6" "7" "-1" "-2")
-list(LENGTH PLACEMENTS NPLACES)
-math(EXPR NPLACES "${NPLACES}-1")
+    # Set possible generation schemes for particles
+    set(PLACENAMES "rand" "uniform" "randgrid" "quasiuniform1" "quasiuniform2"
+        "obsolete1" "obsolete2")
+    set(PLACEMENTS "1" "3" "4" "6" "7" "-1" "-2")
+    list(LENGTH PLACEMENTS NPLACES)
+    math(EXPR NPLACES "${NPLACES}-1")
 
-# Then cycle over all supported configurations for spatial statistics tests
-foreach(lrengine IN ITEMS ${LRENGINES})
-    foreach(kernel RANGE ${NKERNELS})
-        foreach(place RANGE ${NPLACES})
-            list(GET KERNAMES ${kernel} KERNAME)
-            list(GET KERCODES ${kernel} KERCODE)
-            list(GET PLACEMENTS ${place} placement)
-            list(GET PLACENAMES ${place} placename)
-            add_test(NAME spatial_2d_${KERNAME}_${lrengine}_${placename}
-                COMMAND spatial 2 ${placement} ${KERCODE} 0.1 10 2500 500 90
-                1e-9 1 0)
-            set(test_env "MKL_NUM_THREADS=1"
-                "STARSH_BACKEND=OPENMP"
-                "STARSH_LRENGINE=${lrengine}")
-            set_tests_properties(spatial_2d_${KERNAME}_${lrengine}_${placename}
-                PROPERTIES ENVIRONMENT "${test_env}")
-            add_test(NAME spatial_3d_${KERNAME}_${lrengine}_${placename}
-                COMMAND spatial 3 ${placement} ${KERCODE} 0.1 10 3375 675 240
-                1e-9 1 0)
-            set_tests_properties(spatial_3d_${KERNAME}_${lrengine}_${placename}
-                PROPERTIES ENVIRONMENT "${test_env}")
-            if(MPI)
-                add_test(NAME
-                    mpi_spatial_2d_${KERNAME}_${lrengine}_${placename}
-                    COMMAND ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 4
-                    ./mpi_spatial 2 ${placement} ${KERCODE} 0.1 10 2500 500 90
+    # Then cycle over all supported configurations for spatial statistics tests
+    foreach(lrengine IN ITEMS ${LRENGINES})
+        foreach(kernel RANGE ${NKERNELS})
+            foreach(place RANGE ${NPLACES})
+                list(GET KERNAMES ${kernel} KERNAME)
+                list(GET KERCODES ${kernel} KERCODE)
+                list(GET PLACEMENTS ${place} placement)
+                list(GET PLACENAMES ${place} placename)
+                add_test(NAME spatial_2d_${KERNAME}_${lrengine}_${placename}
+                    COMMAND spatial 2 ${placement} ${KERCODE} 0.1 10 2500 500 90
                     1e-9 1 0)
                 set(test_env "MKL_NUM_THREADS=1"
-                    "OMP_NUM_THREADS=${NOMP}"
-                    "STARSH_BACKEND=MPI_OPENMP"
+                    "STARSH_BACKEND=OPENMP"
                     "STARSH_LRENGINE=${lrengine}")
-                set_tests_properties(
-                    mpi_spatial_2d_${KERNAME}_${lrengine}_${placename}
+                set_tests_properties(spatial_2d_${KERNAME}_${lrengine}_${placename}
                     PROPERTIES ENVIRONMENT "${test_env}")
-                add_test(NAME
-                    mpi_spatial_3d_${KERNAME}_${lrengine}_${placename}
-                    COMMAND ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 4
-                    ./mpi_spatial 3 ${placement} ${KERCODE} 0.1 10 3375 675 240
+                add_test(NAME spatial_3d_${KERNAME}_${lrengine}_${placename}
+                    COMMAND spatial 3 ${placement} ${KERCODE} 0.1 10 3375 675 240
                     1e-9 1 0)
-                set_tests_properties(
-                    mpi_spatial_3d_${KERNAME}_${lrengine}_${placename}
+                set_tests_properties(spatial_3d_${KERNAME}_${lrengine}_${placename}
                     PROPERTIES ENVIRONMENT "${test_env}")
-            endif()
+                if(MPI)
+                    add_test(NAME
+                        mpi_spatial_2d_${KERNAME}_${lrengine}_${placename}
+                        COMMAND ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 4
+                        ./mpi_spatial 2 ${placement} ${KERCODE} 0.1 10 2500 500 90
+                        1e-9 1 0)
+                    set(test_env "MKL_NUM_THREADS=1"
+                        "OMP_NUM_THREADS=${NOMP}"
+                        "STARSH_BACKEND=MPI_OPENMP"
+                        "STARSH_LRENGINE=${lrengine}")
+                    set_tests_properties(
+                        mpi_spatial_2d_${KERNAME}_${lrengine}_${placename}
+                        PROPERTIES ENVIRONMENT "${test_env}")
+                    add_test(NAME
+                        mpi_spatial_3d_${KERNAME}_${lrengine}_${placename}
+                        COMMAND ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 4
+                        ./mpi_spatial 3 ${placement} ${KERCODE} 0.1 10 3375 675 240
+                        1e-9 1 0)
+                    set_tests_properties(
+                        mpi_spatial_3d_${KERNAME}_${lrengine}_${placename}
+                        PROPERTIES ENVIRONMENT "${test_env}")
+                endif()
+            endforeach()
         endforeach()
     endforeach()
-endforeach()
+endif()
