--- a/docs/config.in
+++ b/docs/config.in
@@ -795,10 +795,11 @@ INPUT                  = "@CMAKE_CURRENT_SOURCE_DIR@/index.md" \
                          "@CMAKE_CURRENT_SOURCE_DIR@/examples.md" \
                          "@CMAKE_CURRENT_SOURCE_DIR@/workflow.md" \
                          "@CMAKE_CURRENT_SOURCE_DIR@/apps.md" \
+                         "@CMAKE_CURRENT_BINARY_DIR@/../src/applications/spatial" \
                          "@CMAKE_CURRENT_SOURCE_DIR@/../src/applications" \
                          "@CMAKE_CURRENT_SOURCE_DIR@/../src/backends/sequential"\
                          "@CMAKE_CURRENT_SOURCE_DIR@/../src/backends/sequential/blrm"\
-                         "@CMAKE_CURRENT_SOURCE_DIR@/../src/backends/sequential/kernels"\
+                         "@CMAKE_CURRENT_SOURCE_DIR@/../src/backends/sequential/dense"\
                          "@CMAKE_CURRENT_SOURCE_DIR@/../src/backends/openmp"\
                          "@CMAKE_CURRENT_SOURCE_DIR@/../src/backends/openmp/blrm"\
                          "@CMAKE_CURRENT_SOURCE_DIR@/../src/backends/mpi"\
@@ -1490,7 +1491,7 @@ FORMULA_TRANSPARENT    = YES
 # The default value is: NO.
 # This tag requires that the tag GENERATE_HTML is set to YES.
 
-USE_MATHJAX            = NO
+USE_MATHJAX            = YES
 
 # When MathJax is enabled you can set the default output format to be used for
 # the MathJax output. See the MathJax site (see:
@@ -1500,7 +1501,7 @@ USE_MATHJAX            = NO
 # The default value is: HTML-CSS.
 # This tag requires that the tag USE_MATHJAX is set to YES.
 
-MATHJAX_FORMAT         = HTML-CSS
+MATHJAX_FORMAT         = SVG
 
 # When MathJax is enabled you need to specify the location relative to the HTML
 # output directory using the MATHJAX_RELPATH option. The destination directory
