Muxas/init new funcs (#31)
Rewrite some new() functions, add STARSH_int type and fill documentation for (practically) every function and structure

--- a/examples/approximation/CMakeLists.txt
+++ b/examples/approximation/CMakeLists.txt
@@ -3,7 +3,7 @@ set(examples_files)
 if(OPENMP)
     list(APPEND examples_files
         "spatial.c"
-        "rndtiled.c"
+        "randtlr.c"
         "minimal.c"
         "dense.c"
     )
