--- a/include/CMakeLists.txt
+++ b/include/CMakeLists.txt
@@ -2,7 +2,7 @@
 set(STARSH_PUB_HDR
     "${CMAKE_CURRENT_SOURCE_DIR}/starsh.h"
     "${CMAKE_CURRENT_SOURCE_DIR}/starsh-spatial.h"
-    "${CMAKE_CURRENT_SOURCE_DIR}/starsh-rndtiled.h"
+    "${CMAKE_CURRENT_SOURCE_DIR}/starsh-randtlr.h"
     "${CMAKE_CURRENT_SOURCE_DIR}/starsh-minimal.h"
     "${CMAKE_CURRENT_SOURCE_DIR}/starsh-constants.h"
     "${CMAKE_CURRENT_SOURCE_DIR}/starsh-particles.h"
