--- a/src/applications/CMakeLists.txt
+++ b/src/applications/CMakeLists.txt
@@ -4,7 +4,7 @@ add_subdirectory("spatial")
 set(STARSH_SRC
     "${CMAKE_CURRENT_SOURCE_DIR}/common.c"
     "${CMAKE_CURRENT_SOURCE_DIR}/spatial.c"
-    "${CMAKE_CURRENT_SOURCE_DIR}/rndtiled.c"
+    "${CMAKE_CURRENT_SOURCE_DIR}/randtlr.c"
     "${CMAKE_CURRENT_SOURCE_DIR}/minimal.c"
     "${CMAKE_CURRENT_SOURCE_DIR}/particles.c"
     ${STARSH_SRC} PARENT_SCOPE)
