Add Cauchy matrix as app; it compiles successfully

--- a/include/CMakeLists.txt
+++ b/include/CMakeLists.txt
@@ -6,6 +6,7 @@ set(STARSH_PUB_HDR
     "${CMAKE_CURRENT_SOURCE_DIR}/starsh-minimal.h"
     "${CMAKE_CURRENT_SOURCE_DIR}/starsh-constants.h"
     "${CMAKE_CURRENT_SOURCE_DIR}/starsh-particles.h"
+    "${CMAKE_CURRENT_SOURCE_DIR}/starsh-cauchy.h"
 )
 
 install(FILES ${STARSH_PUB_HDR} DESTINATION ${INCDIR})
