--- a/src/applications/CMakeLists.txt
+++ b/src/applications/CMakeLists.txt
@@ -1,9 +1,11 @@
 # set the values of the variable in the parent scope
 add_subdirectory("spatial")
+add_subdirectory("electrostatics")
 
 set(STARSH_SRC
     "${CMAKE_CURRENT_SOURCE_DIR}/common.c"
     "${CMAKE_CURRENT_SOURCE_DIR}/spatial.c"
+    "${CMAKE_CURRENT_SOURCE_DIR}/electrostatics.c"
     "${CMAKE_CURRENT_SOURCE_DIR}/randtlr.c"
     "${CMAKE_CURRENT_SOURCE_DIR}/minimal.c"
     "${CMAKE_CURRENT_SOURCE_DIR}/particles.c"
