--- a/testing/CMakeLists.txt
+++ b/testing/CMakeLists.txt
@@ -22,7 +22,7 @@ if(MPI)
     list(APPEND tests_files
     "mpi_minimal.c"
     "mpi_spatial.c"
-    #"mpi_electrostatics.c"
+    "mpi_electrostatics.c"
     )
 endif()
 
@@ -146,24 +146,26 @@ if(OPENMP)
                 list(GET PLACEMENTS ${place} placement)
                 list(GET PLACENAMES ${place} placename)
                 add_test(NAME spatial_2d_${KERNAME}_${lrengine}_${placename}
-                    COMMAND spatial 2 ${placement} ${KERCODE} 0.1 10 2500 500 90
-                    1e-9 1 0)
+                    COMMAND spatial 2 ${placement} ${KERCODE} 0.1 10 2500 500
+                    90 1e-9 1 0)
                 set(test_env "MKL_NUM_THREADS=1"
                     "STARSH_BACKEND=OPENMP"
                     "STARSH_LRENGINE=${lrengine}")
-                set_tests_properties(spatial_2d_${KERNAME}_${lrengine}_${placename}
+                set_tests_properties(
+                    spatial_2d_${KERNAME}_${lrengine}_${placename}
                     PROPERTIES ENVIRONMENT "${test_env}")
                 add_test(NAME spatial_3d_${KERNAME}_${lrengine}_${placename}
-                    COMMAND spatial 3 ${placement} ${KERCODE} 0.1 10 3375 675 240
-                    1e-9 1 0)
-                set_tests_properties(spatial_3d_${KERNAME}_${lrengine}_${placename}
+                    COMMAND spatial 3 ${placement} ${KERCODE} 0.1 10 3375 675
+                    240 1e-9 1 0)
+                set_tests_properties(
+                    spatial_3d_${KERNAME}_${lrengine}_${placename}
                     PROPERTIES ENVIRONMENT "${test_env}")
                 if(MPI)
                     add_test(NAME
                         mpi_spatial_2d_${KERNAME}_${lrengine}_${placename}
                         COMMAND ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 4
-                        ./mpi_spatial 2 ${placement} ${KERCODE} 0.1 10 2500 500 90
-                        1e-9 1 0)
+                        ./mpi_spatial 2 ${placement} ${KERCODE} 0.1 10 2500 500
+                        90 1e-9)
                     set(test_env "MKL_NUM_THREADS=1"
                         "OMP_NUM_THREADS=${NOMP}"
                         "STARSH_BACKEND=MPI_OPENMP"
@@ -174,8 +176,8 @@ if(OPENMP)
                     add_test(NAME
                         mpi_spatial_3d_${KERNAME}_${lrengine}_${placename}
                         COMMAND ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 4
-                        ./mpi_spatial 3 ${placement} ${KERCODE} 0.1 10 3375 675 240
-                        1e-9 1 0)
+                        ./mpi_spatial 3 ${placement} ${KERCODE} 0.1 10 3375 675
+                        240 1e-9)
                     set_tests_properties(
                         mpi_spatial_3d_${KERNAME}_${lrengine}_${placename}
                         PROPERTIES ENVIRONMENT "${test_env}")
@@ -229,30 +231,28 @@ if(OPENMP)
                 set_tests_properties(
                     electrostatics_3d_${KERNAME}_${lrengine}_${placename}
                     PROPERTIES ENVIRONMENT "${test_env}")
-                #[[
                 if(MPI)
                     add_test(NAME
-                        mpi_spatial_2d_${KERNAME}_${lrengine}_${placename}
+                        mpi_electrostatics_2d_${KERNAME}_${lrengine}_${placename}
                         COMMAND ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 4
-                        ./mpi_spatial 2 ${placement} ${KERCODE} 0.1 10 2500 500 90
-                        1e-9 1 0)
+                        ./mpi_electrostatics 2 ${placement} ${KERCODE} 2500 500
+                        90 1e-9)
                     set(test_env "MKL_NUM_THREADS=1"
                         "OMP_NUM_THREADS=${NOMP}"
                         "STARSH_BACKEND=MPI_OPENMP"
                         "STARSH_LRENGINE=${lrengine}")
                     set_tests_properties(
-                        mpi_spatial_2d_${KERNAME}_${lrengine}_${placename}
+                        mpi_electrostatics_2d_${KERNAME}_${lrengine}_${placename}
                         PROPERTIES ENVIRONMENT "${test_env}")
                     add_test(NAME
-                        mpi_spatial_3d_${KERNAME}_${lrengine}_${placename}
+                        mpi_electrostatics_3d_${KERNAME}_${lrengine}_${placename}
                         COMMAND ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 4
-                        ./mpi_spatial 3 ${placement} ${KERCODE} 0.1 10 3375 675 240
-                        1e-9 1 0)
+                        ./mpi_electrostatics 3 ${placement} ${KERCODE} 3375 675
+                        240 1e-9)
                     set_tests_properties(
-                        mpi_spatial_3d_${KERNAME}_${lrengine}_${placename}
+                        mpi_electrostatics_3d_${KERNAME}_${lrengine}_${placename}
                         PROPERTIES ENVIRONMENT "${test_env}")
                 endif()
-                #]]
             endforeach()
         endforeach()
     endforeach()
