--- a/src/backends/starpu/CMakeLists.txt
+++ b/src/backends/starpu/CMakeLists.txt
@@ -1,4 +1,4 @@
 set(SRC)
 add_subdirectory("blrm")
-add_subdirectory("kernels")
+add_subdirectory("dense")
 add_library(backends_starpu OBJECT ${SRC})
