--- a/src/backends/mpi_starpu/blrm/CMakeLists.txt
+++ b/src/backends/mpi_starpu/blrm/CMakeLists.txt
@@ -2,6 +2,8 @@
 set(SRC
     "${CMAKE_CURRENT_SOURCE_DIR}/dqp3.c"
     "${CMAKE_CURRENT_SOURCE_DIR}/drsdd.c"
+    #"${CMAKE_CURRENT_SOURCE_DIR}/dfe.c"
     "${CMAKE_CURRENT_SOURCE_DIR}/dsdd.c"
     "${CMAKE_CURRENT_SOURCE_DIR}/dmml.c"
-    ${SRC} PARENT_SCOPE)
+    #"${CMAKE_CURRENT_SOURCE_DIR}/dna.c"
+    PARENT_SCOPE)
