--- a/src/backends/mpi_starpu/blrm/CMakeLists.txt
+++ b/src/backends/mpi_starpu/blrm/CMakeLists.txt
@@ -4,6 +4,6 @@ set(SRC
     "${CMAKE_CURRENT_SOURCE_DIR}/drsdd.c"
     #"${CMAKE_CURRENT_SOURCE_DIR}/dfe.c"
     "${CMAKE_CURRENT_SOURCE_DIR}/dsdd.c"
-    "${CMAKE_CURRENT_SOURCE_DIR}/dmml.c"
+    #"${CMAKE_CURRENT_SOURCE_DIR}/dmml.c"
     #"${CMAKE_CURRENT_SOURCE_DIR}/dna.c"
     PARENT_SCOPE)
